# rest-smtp-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
src/: filters.rs  mailer.rs  main.rs  routes.rs
