[package]
name = "rest-smtp-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
lettre = { version = "0.10", default-features = false, features = ["smtp-transport", "pool", "hostname", "builder", "tokio1", "tokio1-rustls-tls", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
